--- a/Lab_1/task1/CMakeLists.txt
+++ b/Lab_1/task1/CMakeLists.txt
@@ -6,4 +6,4 @@ cmake_minimum_required (VERSION 3.8)
 project ("task1")
 
 # Включите подпроекты.
-add_subdirectory ("task1")
+add_subdirectory ("src_c")
