Add static libraries for lab2 and lab3

--- a/Lab_2/src_lib/CMakeLists.txt
+++ b/Lab_2/src_lib/CMakeLists.txt
@@ -4,8 +4,7 @@
 cmake_minimum_required (VERSION 3.8)
 
 # Добавьте источник в исполняемый файл этого проекта.
-add_executable (lab2 "")
+# add_executable (lab2 "main.c" "task2_f.c" "task1_ar.c")
+add_library(lab2_lib STATIC "")
 
-target_sources(lab2 PRIVATE "../src_exe/main.c")
-
-target_link_libraries(lab2 lab2_lib)
+target_sources(lab2_lib PRIVATE "../src_lib/task2_f.c" "../src_lib/task1_ar.c")
