--- a/Lab_2/CMakeLists.txt
+++ b/Lab_2/CMakeLists.txt
@@ -6,4 +6,6 @@ cmake_minimum_required (VERSION 3.8)
 project ("lab2")
 
 # Включите подпроекты.
+add_subdirectory ("src_lib")
+
 add_subdirectory ("src_exe")
