--- a/Lab_3/version do...while/CMakeLists.txt
+++ b/Lab_3/version do...while/CMakeLists.txt
@@ -6,4 +6,6 @@ cmake_minimum_required (VERSION 3.8)
 project ("lab3_do...while")
 
 # Включите подпроекты.
+add_subdirectory ("src_lib")
+
 add_subdirectory ("src_exe")
