--- a/Lab_3/version while/src_exe/CMakeLists.txt
+++ b/Lab_3/version while/src_exe/CMakeLists.txt
@@ -6,7 +6,9 @@ cmake_minimum_required (VERSION 3.8)
 # Добавьте источник в исполняемый файл этого проекта.
 add_executable (lab3_while "")
 
-target_sources (lab3_while PRIVATE "../src_exe/main.c" "../src_exe/summ.c" "../src_exe/summ2.c" "../src_exe/print.c" "../src_exe/findFirstElement.c" "../src_exe/findFirstNegativeElement.c")
+target_sources (lab3_while PRIVATE "../src_exe/main.c")
 
-target_include_directories(lab3_while PRIVATE "../includes")
+target_link_libraries(lab3_while lab3_while_lib)
+
+#target_include_directories(lab3_while PRIVATE "../includes")
 # TODO: Добавьте тесты и целевые объекты, если это необходимо.
