--- a/Lab_4/Lab_4/CMakeLists.txt
+++ b/Lab_4/Lab_4/CMakeLists.txt
@@ -3,9 +3,7 @@
 #
 cmake_minimum_required (VERSION 3.8)
 
-project ("lab3_while")
+project ("lab4")
 
 # Включите подпроекты.
-add_subdirectory ("src_lib")
-
 add_subdirectory ("src_exe")
