--- a/Lab_1/task8/src_lib/CMakeLists.txt
+++ b/Lab_1/task8/src_lib/CMakeLists.txt
@@ -5,4 +5,4 @@ cmake_minimum_required (VERSION 3.8)
 
 add_library(task8_lib STATIC "")
 
-target_sources(task8_lib PRIVATE "../src_lib/task7_func.c")
+target_sources(task8_lib PRIVATE "../../task7/src_exe/task7_func.c")
