--- a/Lab_1/task8/src_exe/CMakeLists.txt
+++ b/Lab_1/task8/src_exe/CMakeLists.txt
@@ -7,11 +7,11 @@ cmake_minimum_required (VERSION 3.8)
 
 add_executable (task8 "")
 
-target_sources(task8 PRIVATE "../src_exe/task7_main.c")
+target_sources(task8 PRIVATE "../../task7/src_exe/task7_main.c")
 
 target_link_libraries(task8 task8_lib)
 
-target_include_directories(task8 PRIVATE "../includes")
+target_include_directories(task8 PRIVATE "../../task7/includes")
 
 
 # TODO: Добавьте тесты и целевые объекты, если это необходимо.
