Fix lab2 if > ? and head.h

--- a/Lab_2/src_lib/CMakeLists.txt
+++ b/Lab_2/src_lib/CMakeLists.txt
@@ -7,4 +7,6 @@ cmake_minimum_required (VERSION 3.8)
 # add_executable (lab2 "main.c" "task2_f.c" "task1_ar.c")
 add_library(lab2_lib STATIC "")
 
+target_include_directories(lab2_lib PRIVATE "../includes/head.h")
+
 target_sources(lab2_lib PRIVATE "../src_lib/task2_f.c" "../src_lib/task1_ar.c")
