--- a/Lab_1/CMakeLists.txt
+++ b/Lab_1/CMakeLists.txt
@@ -1,10 +1,7 @@
-﻿# CMakeList.txt: файл проекта CMake верхнего уровня; проведите глобальную конфигурацию
-# и включите сюда подпроекты.
-cmake_minimum_required (VERSION 3.8)
+﻿cmake_minimum_required (VERSION 3.8)
 
-project ("Lab_1")
+project ("lab1")
 
-# Включите подпроекты.
 add_subdirectory ("task1")
 add_subdirectory ("task2")
 add_subdirectory ("task3")
