--- a/Lab_1/task8/src_exe/CMakeLists.txt
+++ b/Lab_1/task8/src_exe/CMakeLists.txt
@@ -1,9 +1,4 @@
-﻿# CMakeList.txt: проект CMake для task8; включите исходный код и определения,
-# укажите здесь логику для конкретного проекта.
-#
-cmake_minimum_required (VERSION 3.8)
-
-# Добавьте источник в исполняемый файл этого проекта.
+﻿cmake_minimum_required (VERSION 3.8)
 
 add_executable (task8 "")
 
@@ -12,6 +7,3 @@ target_sources(task8 PRIVATE "../../task7/src_exe/task7_main.c")
 target_link_libraries(task8 task8_lib)
 
 target_include_directories(task8 PRIVATE "../../task7/includes")
-
-
-# TODO: Добавьте тесты и целевые объекты, если это необходимо.
