--- a/Lab_2/CMakeLists.txt
+++ b/Lab_2/CMakeLists.txt
@@ -1,11 +1,7 @@
-﻿# CMakeList.txt: файл проекта CMake верхнего уровня; проведите глобальную конфигурацию
-# и включите сюда подпроекты.
-#
-cmake_minimum_required (VERSION 3.8)
+﻿cmake_minimum_required (VERSION 3.8)
 
 project ("lab2")
 
-# Включите подпроекты.
 add_subdirectory ("src_lib")
 
 add_subdirectory ("src_exe")
