--- a/Lab_2/src_exe/CMakeLists.txt
+++ b/Lab_2/src_exe/CMakeLists.txt
@@ -1,9 +1,5 @@
-﻿# CMakeList.txt: проект CMake для task1; включите исходный код и определения,
-# укажите здесь логику для конкретного проекта.
-#
-cmake_minimum_required (VERSION 3.8)
+﻿cmake_minimum_required (VERSION 3.8)
 
-# Добавьте источник в исполняемый файл этого проекта.
 add_executable (lab2 "")
 
 target_sources(lab2 PRIVATE "../src_exe/main.c")
