--- a/Lab_4/Task1/CMakeLists.txt
+++ b/Lab_4/Task1/CMakeLists.txt
@@ -1,5 +1,6 @@
 ﻿cmake_minimum_required (VERSION 3.8)
 
-project ("task7")
+project ("lab4")
 
+add_subdirectory ("src_lib")
 add_subdirectory ("src_exe")
