--- a/Lab_4/Task1/src_exe/CMakeLists.txt
+++ b/Lab_4/Task1/src_exe/CMakeLists.txt
@@ -1,4 +1,2 @@
-﻿cmake_minimum_required (VERSION 3.8)
-
-add_executable (task1 "main.c")
+﻿add_executable (task1 "main.c")
 target_link_libraries(task1 PRIVATE task1_lib)
