--- a/Lab_4/Task1/src_lib/CMakeLists.txt
+++ b/Lab_4/Task1/src_lib/CMakeLists.txt
@@ -1,4 +1,2 @@
-﻿cmake_minimum_required (VERSION 3.8)
-
-add_library (task1_lib "func.c")
+﻿add_library (task1_lib "func.c")
 target_include_directories(task1_lib PUBLIC "../includes")
