--- a/Lab_4/Task2/src_exe/CMakeLists.txt
+++ b/Lab_4/Task2/src_exe/CMakeLists.txt
@@ -1,4 +1,2 @@
-﻿cmake_minimum_required (VERSION 3.8)
-
-add_executable (task2 "main.c")
+﻿add_executable (task2 "main.c")
 target_link_libraries(task2 PRIVATE task2_lib)
