--- a/Lab_6/src_exe/CMakeLists.txt
+++ b/Lab_6/src_exe/CMakeLists.txt
@@ -1,1 +1,3 @@
-add_executable(lab5 "main.c")
+add_executable(lab5 "")
+target_include_directories(lab5 PUBLIC "../includes")
+target_sources(lab5 PRIVATE "main.c")
