--- a/Lab_4/Task2/src_exe/CMakeLists.txt
+++ b/Lab_4/Task2/src_exe/CMakeLists.txt
@@ -1,2 +1,2 @@
-﻿add_executable (task2 "main.c")
-target_link_libraries(task2 PRIVATE task2_lib)
+﻿add_executable (Task2 "main.c")
+target_link_libraries(Task2 PRIVATE Task2_lib)
