--- a/Lab_4/Task2/src_lib/CMakeLists.txt
+++ b/Lab_4/Task2/src_lib/CMakeLists.txt
@@ -1,3 +1,3 @@
-﻿add_library (task2_lib "")
-target_sources(task2_lib PRIVATE "writeArray.c" "readArray.c" "sort.c" "sortStackArray.c")
-target_include_directories(task2_lib PUBLIC "../includes")
+﻿add_library (Task2_lib "")
+target_sources(Task2_lib PRIVATE "writeArray.c" "readArray.c" "sort.c" "sortStackArray.c")
+target_include_directories(Task2_lib PUBLIC "../includes")
