--- a/Lab_4/Task1/src_lib/CMakeLists.txt
+++ b/Lab_4/Task1/src_lib/CMakeLists.txt
@@ -1,2 +1,2 @@
-﻿add_library (Task1_lib "func.c")
+﻿add_library (Task1_lib STATIC "func.c")
 target_include_directories(Task1_lib PUBLIC "../includes")
