--- a/Lab_7/CMakeLists.txt
+++ b/Lab_7/CMakeLists.txt
@@ -1,10 +1,8 @@
 ﻿cmake_minimum_required (VERSION 3.8)
 
-project ("C_LABS")
+project ("lab7")
 
-add_subdirectory ("Lab_1")
-add_subdirectory ("Lab_2")
-add_subdirectory ("Lab_3")
-add_subdirectory ("Lab_4")
-add_subdirectory ("Lab_5")
-add_subdirectory ("Lab_6")
+add_subdirectory ("Task[1]")
+add_subdirectory ("Task[2]")
+add_subdirectory ("Task[3-6]")
+add_subdirectory ("Task[7]")
