--- a/Lab_4/Task1/src_exe/CMakeLists.txt
+++ b/Lab_4/Task1/src_exe/CMakeLists.txt
@@ -1,2 +1,2 @@
-﻿add_executable (Task1 "main.c")
-target_link_libraries(Task1 PRIVATE Task1_lib)
+﻿add_executable (lab4_1 "main.c")
+target_link_libraries(lab4_1 PRIVATE Task1_lib)
